# AdamsSSMasseyProductCalculator

./: CITATION.cff  Cargo.toml
src/: adams.rs  lattice.rs  utils.rs
src/adams/: element.rs  generator.rs  multiplication.rs
